[gd_scene load_steps=42 format=2]

[ext_resource path="res://scenes/XPBar.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://scripts/Camera2D.gd" type="Script" id=3]
[ext_resource path="res://assets/art/hand.png" type="Texture" id=4]
[ext_resource path="res://scripts/braco.gd" type="Script" id=5]
[ext_resource path="res://assets/art/gato_caino.png" type="Texture" id=6]
[ext_resource path="res://assets/art/shooteffect.png" type="Texture" id=7]
[ext_resource path="res://scenes/TiroSpawner.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/HurtBoxPlayer.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/PlayerAura.tscn" type="PackedScene" id=10]
[ext_resource path="res://scenes/Upgrades.tscn" type="PackedScene" id=11]
[ext_resource path="res://scenes/Died.tscn" type="PackedScene" id=12]
[ext_resource path="res://assets/art/gato_animado.png" type="Texture" id=13]
[ext_resource path="res://scenes/LifeScene.tscn" type="PackedScene" id=14]
[ext_resource path="res://assets/art/circlo.png" type="Texture" id=15]
[ext_resource path="res://assets/art/gato_morto.png" type="Texture" id=16]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 13 )
region = Rect2( 140, 0, 35, 35 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 13 )
region = Rect2( 175, 0, 35, 35 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 16 )
region = Rect2( 0, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 16 )
region = Rect2( 40, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 16 )
region = Rect2( 80, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 16 )
region = Rect2( 120, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 16 )
region = Rect2( 160, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 13 )
region = Rect2( 35, 0, 35, 35 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 13 )
region = Rect2( 0, 0, 35, 35 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 13 )
region = Rect2( 35, 0, 35, 35 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 13 )
region = Rect2( 70, 0, 35, 35 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 13 )
region = Rect2( 105, 0, 35, 35 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 35, 35 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 6 )
region = Rect2( 35, 0, 35, 35 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 6 )
region = Rect2( 70, 0, 35, 35 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 6 )
region = Rect2( 105, 0, 35, 35 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 13 )
region = Rect2( 105, 0, 35, 35 )

[sub_resource type="SpriteFrames" id=38]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ) ],
"loop": false,
"name": "Dying",
"speed": 5.0
}, {
"frames": [ SubResource( 29 ) ],
"loop": true,
"name": "KO2",
"speed": 1.0
}, {
"frames": [ SubResource( 30 ), SubResource( 10 ), SubResource( 31 ), SubResource( 32 ) ],
"loop": true,
"name": "run",
"speed": 8.0
}, {
"frames": [ SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ) ],
"loop": true,
"name": "KO1",
"speed": 5.0
}, {
"frames": [ SubResource( 37 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=19]
extents = Vector2( 7, 10 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 7 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 7 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 7 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=24]
animations = [ {
"frames": [ SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ) ],
"loop": true,
"name": "default",
"speed": 32.0
} ]

[sub_resource type="RectangleShape2D" id=25]
extents = Vector2( 7, 10 )

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 17
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 38 )
animation = "Dying"
frame = 4
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1, 6 )
shape = SubResource( 19 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
script = ExtResource( 3 )

[node name="braco" type="Position2D" parent="."]
script = ExtResource( 5 )

[node name="TiroSpawner" parent="braco" instance=ExtResource( 8 )]
position = Vector2( 25, 0 )

[node name="effect" type="AnimatedSprite" parent="braco"]
visible = false
position = Vector2( 26, -16.5 )
frames = SubResource( 24 )
centered = false

[node name="mao" type="Sprite" parent="braco"]
position = Vector2( 17, 0 )
texture = ExtResource( 4 )

[node name="atk_cd" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="HurtBoxPlayer" parent="." instance=ExtResource( 9 )]
collision_mask = 20

[node name="CollisionShape2D" parent="HurtBoxPlayer" index="0"]
position = Vector2( 1, 6 )
shape = SubResource( 25 )

[node name="invincible_cd" type="Timer" parent="."]
wait_time = 1.5

[node name="Aura" parent="." instance=ExtResource( 10 )]
collision_layer = 8
collision_mask = 4

[node name="aura_tick" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="Upgrades" parent="." instance=ExtResource( 11 )]
pause_mode = 2
z_index = 10

[node name="UI" parent="Upgrades" index="0"]
position = Vector2( 5.00002, -4.99999 )

[node name="Aura" parent="Upgrades" index="1"]
margin_left = -150.0
margin_top = -68.0
margin_right = -87.0
margin_bottom = 5.0

[node name="DMG" parent="Upgrades" index="2"]
margin_left = -58.0
margin_top = -67.0
margin_right = 5.0
margin_bottom = 6.0

[node name="Pierce" parent="Upgrades" index="3"]
margin_left = 21.0
margin_top = -67.0
margin_right = 84.0
margin_bottom = 6.0

[node name="FireRate" parent="Upgrades" index="4"]
margin_left = 95.0
margin_top = -68.0
margin_right = 158.0
margin_bottom = 5.0

[node name="Front" parent="Upgrades" index="5"]
margin_left = -66.0
margin_top = 9.0
margin_right = -3.0
margin_bottom = 82.0

[node name="Back" parent="Upgrades" index="6"]
margin_left = 3.0
margin_top = 3.0
margin_right = 66.0
margin_bottom = 76.0

[node name="Died" parent="." instance=ExtResource( 12 )]
pause_mode = 2
position = Vector2( -5, -7 )
z_index = 1

[node name="Life" parent="." instance=ExtResource( 14 )]
position = Vector2( -235, -122 )

[node name="AuraCircle" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 15 )

[node name="XPBar" parent="." instance=ExtResource( 1 )]
margin_left = -258.0
margin_top = -109.0
margin_right = -188.0
margin_bottom = -89.0
rect_scale = Vector2( 2, 2 )
value = 100.0

[node name="dead_time" type="Timer" parent="."]

[connection signal="animation_finished" from="braco/effect" to="." method="_on_effect_animation_finished"]
[connection signal="timeout" from="atk_cd" to="." method="_on_atk_cd_timeout"]
[connection signal="timeout" from="invincible_cd" to="." method="_on_invincible_cd_timeout"]
[connection signal="timeout" from="aura_tick" to="." method="_on_aura_tick_timeout"]
[connection signal="button_down" from="Upgrades/Aura" to="." method="_on_Aura_button_down"]
[connection signal="button_down" from="Upgrades/DMG" to="." method="_on_DMG_button_down"]
[connection signal="button_down" from="Upgrades/Pierce" to="." method="_on_Pierce_button_down"]
[connection signal="button_down" from="Upgrades/FireRate" to="." method="_on_FireRate_button_down"]
[connection signal="button_down" from="Upgrades/Front" to="." method="_on_Front_button_down"]
[connection signal="button_down" from="Upgrades/Back" to="." method="_on_Back_button_down"]
[connection signal="button_down" from="Died/Reset" to="." method="_on_Reset_button_down"]
[connection signal="button_down" from="Died/Quit" to="." method="_on_Quit_button_down"]
[connection signal="timeout" from="dead_time" to="." method="_on_dead_time_timeout"]

[editable path="HurtBoxPlayer"]
[editable path="Aura"]
[editable path="Upgrades"]
[editable path="Died"]
